# opengl

./: CMakeLists.txt  README.md
include/glad/: glad.h
opengl/: leetcode.cpp
opengl/1GetStart/11HelloWindow/: HelloWindow.cpp
opengl/1GetStart/12HelloTriangle/: ElementArray.cpp  HelloTriangle.cpp  HelloTriangle2.cpp  HelloTriangle2Shader.cpp  HelloTriangle2VBO.cpp
opengl/1GetStart/13Shader/: Shader.cpp  Shader_class.cpp
opengl/1GetStart/14Image/: Image.cpp  Image2.cpp
opengl/1GetStart/15transform/: transform.cpp
opengl/1GetStart/16projection/: 3D.cpp  projection.cpp
opengl/1GetStart/17camera/: camera.cpp  cameraWithClass.cpp
opengl/2Light/21Color/: color.cpp
opengl/2Light/22Light/: light.cpp  light2.cpp
opengl/2Light/23Material/: material.cpp
opengl/2Light/24LightingMap/: lightingmap.cpp  lightingmap2.cpp
opengl/2Light/MutiLight/MutiLight/: MutiLight.cpp
opengl/2Light/lightCast/: light_casters_SpotLight.cpp  light_casters_directional.cpp  light_casters_point.cpp  lightcast.cpp
opengl/Camera/: camera.h
opengl/Shader/: shaders_s.h
opengl/Shader/shaders/: 131shader_move_right.vs  131shader_reverse_triangle.vs  141image2Control.fs  141image2Other.fs  141image2scale.fs  161projection.vs  212colorObject.fs  212colorObject.vs  231colorObject.fs  241colorObject.fs  241colorObject.vs  251colorObject.fs  252colorObject.fs  253colorObject.fs  254colorObject.fs
src/: glad.c
